Interpolated string and styled string logged to console

--- a/DevToolPractice.html
+++ b/DevToolPractice.html
@@ -18,10 +18,13 @@
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
+console.log('Hello I am a %s string!', 'DENK')
 
     // Styled
+    console.log('%c I am some great text', 'font-size:40px; background:green; text-shadow:10px 5px 0 blue')
 
     // warning!
 
