--- a/DevToolPractice.html
+++ b/DevToolPractice.html
@@ -76,6 +76,8 @@ console.log('Hello I am a %s string!', 'DENK');
         console.log(data);
       });
 
+    console.table(dogs);
+
   </script>
 </body>
 </html>
